--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 20px;
   color: black;
-  background: #00990d url("img/artificial-grass.jpg") repeat 50% ;
+  background: #326717 url('/img/bg.jpg') center top no-repeat;
 }
 
 h1 {
