--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 20px;
-  color: black;  
-  background: #326717 url("/img/bg.jpg") center top no-repeat 50%;
+  color: black;
+
+  background: #326717 url('img/bg.jpg') center top no-repeat;
 }
 
 h1 {
