--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ h1 {
   text-align: center;
 }
 
+h2 {
+  color: black;
+  text-align: center;
+}
+
+
 p{
     background: rgba(0, 255, 50, 0.5);
     padding: 20px;
