--- a/style.css
+++ b/style.css
@@ -3,9 +3,17 @@ body {
   font-size: 20px;
   color: black;
 
-  background: #326717 url('img/bg.jpg') center top no-repeat;
+  background: #326717 url("img/bg.jpg") center top no-repeat;
 }
 
+#highlits {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+.highlits-content article{
+  width: 500px;
+}
 h1 {
   color: yellow;
   text-align: center;
@@ -16,19 +24,16 @@ h2 {
   text-align: center;
 }
 
-
-p{
-    background: rgba(0, 255, 50, 0.5);
-    padding: 20px;
+p {
+  background: rgba(0, 255, 50, 0.5);
+  padding: 20px;
 }
 
-img{
-    width: 100px;
+img {
+  width: 100px;
 }
 
 footer {
-    background-color: #000;
-    color: #fff;
-
-
+  background-color: #000;
+  color: #fff;
 }
